# codemash-2026-mcp-demo

./: .gitignore  Aptfile  Procfile  README.md  justfile  main.py  project.toml  pyproject.toml  requirements.txt
.github/workflows/: package.yml  test.yml
data/: endpoint-1.json  endpoint-2.json  endpoint-3.json
scripts/: package.sh  start.sh
src/codemash_mcp/: __init__.py  codemash.py  codemash_test.py  helpers.py  helpers_test.py  server.py  server_test.py  types.py  utils.py  utils_test.py
